--- a/Modelos de valuacion de activos/Clase_Asset_Pricing_Student.ipynb
+++ b/Modelos de valuacion de activos/Clase_Asset_Pricing_Student.ipynb
@@ -186,9 +186,9 @@
     "## 4) Multifactor (MKT, SMB, HML, MOM)\n",
     "\n",
     "Modelo:\n",
-    "\\[\n",
+    "$$\n",
     "R_i - R_f = \\alpha + b_m (R_m - R_f) + b_{smb} SMB + b_{hml} HML + b_{mom} MOM + \\epsilon\n",
-    "\\]\n",
+    "$$\n",
     "\n",
     "**Tareas:**\n",
     "1) Ajusta el multifactor.  \n",
@@ -286,7 +286,11 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
