Update CAPM notebook

--- a/DescargaYahooFinance.ipynb
+++ b/DescargaYahooFinance.ipynb
@@ -733,6 +733,257 @@
     "print(f\"Sharpe ratio SPY: {sharpe_psy:.4f}\")\n",
     "print(f\"Sharpe ratio META: {sharpe_meta:.4f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "fb1a29c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "$BKR.B: possibly delisted; no price data found  (1d 2020-01-01 -> 2025-01-31)\n",
+      "\n",
+      "1 Failed download:\n",
+      "['BKR.B']: possibly delisted; no price data found  (1d 2020-01-01 -> 2025-01-31)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Ticker</th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th>ABBV</th>\n",
+       "      <th>AMD</th>\n",
+       "      <th>AMZN</th>\n",
+       "      <th>AVGO</th>\n",
+       "      <th>AXP</th>\n",
+       "      <th>BAC</th>\n",
+       "      <th>BKR.B</th>\n",
+       "      <th>CAT</th>\n",
+       "      <th>COST</th>\n",
+       "      <th>...</th>\n",
+       "      <th>PG</th>\n",
+       "      <th>PLTR</th>\n",
+       "      <th>QQQ</th>\n",
+       "      <th>SPY</th>\n",
+       "      <th>TSLA</th>\n",
+       "      <th>UNH</th>\n",
+       "      <th>V</th>\n",
+       "      <th>WFC</th>\n",
+       "      <th>WMT</th>\n",
+       "      <th>XOM</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-01-02</th>\n",
+       "      <td>72.400505</td>\n",
+       "      <td>69.266174</td>\n",
+       "      <td>49.099998</td>\n",
+       "      <td>94.900497</td>\n",
+       "      <td>27.735552</td>\n",
+       "      <td>116.380043</td>\n",
+       "      <td>30.760479</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>132.564774</td>\n",
+       "      <td>266.133850</td>\n",
+       "      <td>...</td>\n",
+       "      <td>105.524017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>208.580215</td>\n",
+       "      <td>297.699005</td>\n",
+       "      <td>28.684000</td>\n",
+       "      <td>265.243042</td>\n",
+       "      <td>182.809250</td>\n",
+       "      <td>45.827171</td>\n",
+       "      <td>36.433826</td>\n",
+       "      <td>53.306412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-03</th>\n",
+       "      <td>71.696625</td>\n",
+       "      <td>68.608711</td>\n",
+       "      <td>48.599998</td>\n",
+       "      <td>93.748497</td>\n",
+       "      <td>27.030102</td>\n",
+       "      <td>115.224113</td>\n",
+       "      <td>30.121786</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>130.724197</td>\n",
+       "      <td>266.353058</td>\n",
+       "      <td>...</td>\n",
+       "      <td>104.814316</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>206.669647</td>\n",
+       "      <td>295.444763</td>\n",
+       "      <td>29.534000</td>\n",
+       "      <td>262.558929</td>\n",
+       "      <td>181.355347</td>\n",
+       "      <td>45.545811</td>\n",
+       "      <td>36.112186</td>\n",
+       "      <td>52.877865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-06</th>\n",
+       "      <td>72.267921</td>\n",
+       "      <td>69.150139</td>\n",
+       "      <td>48.389999</td>\n",
+       "      <td>95.143997</td>\n",
+       "      <td>26.989664</td>\n",
+       "      <td>114.724747</td>\n",
+       "      <td>30.078634</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>130.636154</td>\n",
+       "      <td>266.426086</td>\n",
+       "      <td>...</td>\n",
+       "      <td>104.959663</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>208.001266</td>\n",
+       "      <td>296.571869</td>\n",
+       "      <td>30.102667</td>\n",
+       "      <td>264.381561</td>\n",
+       "      <td>180.963181</td>\n",
+       "      <td>45.272972</td>\n",
+       "      <td>36.038670</td>\n",
+       "      <td>53.283863</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Ticker           AAPL       ABBV        AMD       AMZN       AVGO         AXP  \\\n",
+       "Date                                                                            \n",
+       "2020-01-02  72.400505  69.266174  49.099998  94.900497  27.735552  116.380043   \n",
+       "2020-01-03  71.696625  68.608711  48.599998  93.748497  27.030102  115.224113   \n",
+       "2020-01-06  72.267921  69.150139  48.389999  95.143997  26.989664  114.724747   \n",
+       "\n",
+       "Ticker            BAC  BKR.B         CAT        COST  ...          PG  PLTR  \\\n",
+       "Date                                                  ...                     \n",
+       "2020-01-02  30.760479    NaN  132.564774  266.133850  ...  105.524017   NaN   \n",
+       "2020-01-03  30.121786    NaN  130.724197  266.353058  ...  104.814316   NaN   \n",
+       "2020-01-06  30.078634    NaN  130.636154  266.426086  ...  104.959663   NaN   \n",
+       "\n",
+       "Ticker             QQQ         SPY       TSLA         UNH           V  \\\n",
+       "Date                                                                    \n",
+       "2020-01-02  208.580215  297.699005  28.684000  265.243042  182.809250   \n",
+       "2020-01-03  206.669647  295.444763  29.534000  262.558929  181.355347   \n",
+       "2020-01-06  208.001266  296.571869  30.102667  264.381561  180.963181   \n",
+       "\n",
+       "Ticker            WFC        WMT        XOM  \n",
+       "Date                                         \n",
+       "2020-01-02  45.827171  36.433826  53.306412  \n",
+       "2020-01-03  45.545811  36.112186  52.877865  \n",
+       "2020-01-06  45.272972  36.038670  53.283863  \n",
+       "\n",
+       "[3 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tickers = ['NVDA',\n",
+    "'AAPL',\n",
+    "'GOOGL',\n",
+    "'MSFT',\n",
+    "'AMZN',\n",
+    "'META',\n",
+    "'TSLA',\n",
+    "'AVGO',\n",
+    "'LLY',\n",
+    "'WMT',\n",
+    "'JPM',\n",
+    "'V',\n",
+    "'ORCL',\n",
+    "'MA',\n",
+    "'JNJ',\n",
+    "'XOM',\n",
+    "'PLTR',\n",
+    "'NFLX',\n",
+    "'BAC',\n",
+    "'ABBV',\n",
+    "'COST',\n",
+    "'AMD',\n",
+    "'HD',\n",
+    "'PG',\n",
+    "'GE',\n",
+    "'MU',\n",
+    "'CSCO',\n",
+    "'KO',\n",
+    "'CVX',\n",
+    "'WFC',\n",
+    "'UNH',\n",
+    "'MS',\n",
+    "'IBM',\n",
+    "'GS',\n",
+    "'CAT',\n",
+    "'AXP',\n",
+    "'BKR.B',\n",
+    "'SPY', 'QQQ']\n",
+    "\n",
+    "fecha_inicio = '2020-01-01'\n",
+    "fecha_final = '2025-01-31'\n",
+    "df = yf.download(tickers, start=fecha_inicio, end=fecha_final, progress=False)['Close']\n",
+    "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6104c926",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"C:\\\\Users\\\\fdiazl\\\\Downloads\\\\Stock_pricesUSA_2025.csv\")"
+   ]
   }
  ],
  "metadata": {
